--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "react": "^16.5.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.5.0",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "redux": "^4.0.0"
   },
